TEST_PROGRAMS/typing_benchmarks/invalid/undecl_type1.go
package main

// t is undeclared
var x t
